SDKs/twilio.com/twilio_pricing_v2/1.39.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get github.com/speakeasy-api/openapi-directory/SDKs/twilio.com/twilio_pricing_v2/1.39.1/go
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```go
package main

import (
    "context"
    "log"
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()

    req := operations.FetchTrunkingCountryRequest{
        Security: operations.FetchTrunkingCountrySecurity{
            AccountSidAuthToken: shared.SchemeAccountSidAuthToken{
                Password: "YOUR_PASSWORD_HERE",
                Username: "YOUR_USERNAME_HERE",
            },
        },
        PathParams: operations.FetchTrunkingCountryPathParams{
            IsoCountry: "unde",
        },
    }

    ctx := context.Background()
    res, err := s.FetchTrunkingCountry(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.PricingV2TrunkingCountryInstance != nil {
        // handle response
    }
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `FetchTrunkingCountry` - Fetch a specific Country.
* `FetchTrunkingNumber` - Fetch pricing information for a specific destination and, optionally, origination phone number.
* `FetchVoiceCountry` - Fetch a specific Country.
* `FetchVoiceNumber` - Fetch pricing information for a specific destination and, optionally, origination phone number.
* `ListTrunkingCountry`
* `ListVoiceCountry`
<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
